CSE-1209 - Changed LIST_LIMITED_PARTNERSHIP_SUBTYPES List creation to use List.of() so that its immutable