@@ -1,6 +1,5 @@
 package uk.gov.companieshouse.confirmationstatementapi.utils;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class Constants {
@@ -21,7 +20,7 @@ public class Constants {
     public static final String LIMITED_PARTNERSHIP_PFLP_SUBTYPE = "pflp";
     public static final String LIMITED_PARTNERSHIP_SPFLP_SUBTYPE = "spflp";
 
-    public static final List<String> LIST_LIMITED_PARTNERSHIP_SUBTYPES = Arrays.asList(
+    public static final List<String> LIST_LIMITED_PARTNERSHIP_SUBTYPES = List.of(
             LIMITED_PARTNERSHIP_LP_SUBTYPE, LIMITED_PARTNERSHIP_PFLP_SUBTYPE,
             LIMITED_PARTNERSHIP_SLP_SUBTYPE, LIMITED_PARTNERSHIP_SPFLP_SUBTYPE);
 }
